[package]
name = "nip-55"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "Reference implementation of Nostr NIP-55"
documentation = "https://docs.rs/nip-55"
repository = "https://github.com/tvolk131/nip-55"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
nostr-relay-pool = "0.30"
nostr-sdk = "0.30"
serde = "1"
serde_json = "1"
tokio = "1"
